fix: Update asset paths in HTML and manifest for correct icon references

--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="bookish.png" />
+    <link rel="icon" href="/Bookish/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Bookish - Your personal reading companion with virtual pet"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/manifest-icon-192.maskable.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="/Bookish/manifest-icon-192.maskable.png" />
+    <link rel="manifest" href="/Bookish/manifest.json" />
     <title>Bookish - Reading Companion</title>
     
     <!-- Start Single Page Apps for GitHub Pages -->
